# py-operrouter

./: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  setup.py
.github/workflow/: publish.yml
.github/workflows/: python-publish.yml
examples/: README.md  datasource_ffi.py  datasource_grpc.py  datasource_http.py  debug_ffi.py  llm_ffi.py  llm_grpc.py  llm_http.py  test_ffi_proto.py
src/py_operrouter/: __init__.py  types.py
src/py_operrouter/client/: __init__.py  ffi_client.py  grpc_client.py  http_client.py
